--- a/example3/index.html
+++ b/example3/index.html
@@ -6,6 +6,7 @@
 	<title>MQTT demo</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css">
 </head>
 	<body>
 
@@ -15,7 +16,7 @@
 		  </span>
 		</nav>
 
-		<div class="container-fluid" style="padding-top: 20px;">
+		<div class="container" style="padding-top: 20px;">
 			<div class="row">
 				<div class="col-6">
 					<div class="card">
@@ -38,6 +39,18 @@
 					</div>
 				</div>
 			</div>
+			<div class="row" style="padding-top: 20px;">
+				<div class="col-12">
+					<div class="card">
+					  <div class="card-header">
+						Cartographie
+					  </div>
+					  <div class="card-body" style="padding: 0;">
+						<div id="mapid" style="width: 100%; height: 300px;"></div>
+					  </div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
@@ -45,6 +58,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js"></script>
 		<script src="mqtt_wrapper.js"></script>
 		<script>
 
@@ -79,7 +93,12 @@
 					scales: {
 						yAxes: [{
 							ticks: {
-								beginAtZero:true
+								suggestedMin: -100,
+								suggestedMax: 100,
+							},
+							scaleLabel: {
+								display: true,
+								labelString: 'm.s²'
 							}
 						}]
 					}
@@ -117,7 +136,12 @@
 					scales: {
 						yAxes: [{
 							ticks: {
-								beginAtZero:true
+								suggestedMin: -100,
+								suggestedMax: 100,
+							},
+							scaleLabel: {
+								display: true,
+								labelString: 'uT'
 							}
 						}]
 					}
@@ -131,7 +155,7 @@
 				chart.data.datasets[1].data.push(data.y);
 				chart.data.datasets[2].data.push(data.z);
 
-				if( chart.data.labels.length > 30 )
+				while( chart.data.labels.length > 30 )
 				{
 					chart.data.labels.shift();
 					chart.data.datasets[0].data.shift();
@@ -145,6 +169,19 @@
 			$(document).ready(function() {
 				MQTTconnect();
 			});
+
+	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+
+	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+		maxZoom: 18,
+		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+		id: 'mapbox.streets'
+	}).addTo(mymap);
+
+	L.marker([51.5, -0.09]).addTo(mymap);
+
 		</script>
 	</body>
 </html>
