--- a/example3/index.html
+++ b/example3/index.html
@@ -16,9 +16,9 @@
 		  </span>
 		</nav>
 
-		<div class="container" style="padding-top: 20px;">
+		<div class="container-fluid" style="padding-top: 20px;">
 			<div class="row">
-				<div class="col-6">
+				<div class="col-4">
 					<div class="card">
 					  <div class="card-header">
 						Accéléromètre
@@ -28,7 +28,7 @@
 					  </div>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-4">
 					<div class="card">
 					  <div class="card-header">
 						Magnétomètre
@@ -38,15 +38,46 @@
 					  </div>
 					</div>
 				</div>
+				<div class="col-4">
+					<div class="card">
+					  <div class="card-header">
+						Vitesse
+					  </div>
+					  <div class="card-body">
+						<canvas id="speedChart"></canvas>
+					  </div>
+					</div>
+				</div>
 			</div>
 			<div class="row" style="padding-top: 20px;">
-				<div class="col-12">
+				<div class="col-6">
 					<div class="card">
 					  <div class="card-header">
 						Cartographie
 					  </div>
 					  <div class="card-body" style="padding: 0;">
 						<div id="mapid" style="width: 100%; height: 300px;"></div>
+					  </div>
+					</div>
+				</div>
+				<div class="col-6">
+					<div class="card">
+					  <div class="card-header">
+						Cartographie
+					  </div>
+					  <div class="card-body" style="padding: 20px;">
+						<h5>HDOP :</h5>
+						<div class="progress">
+						  <div id="HDOP" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="2" aria-valuemin="0" aria-valuemax="10"></div>
+						</div><br />
+						<h5>PDOP :</h5>
+						<div class="progress">
+						  <div id="PDOP" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="3" aria-valuemin="0" aria-valuemax="10"></div>
+						</div><br />
+						<h5>VDOP :</h5>
+						<div class="progress">
+						  <div id="VDOP" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="4" aria-valuemin="0" aria-valuemax="10"></div>
+						</div>
 					  </div>
 					</div>
 				</div>
@@ -148,22 +179,75 @@
 				}
 			});
 
-			function add3D(chart, data) {
-				chart.data.labels.push('');
-
-				chart.data.datasets[0].data.push(data.x);
-				chart.data.datasets[1].data.push(data.y);
-				chart.data.datasets[2].data.push(data.z);
-
-				while( chart.data.labels.length > 30 )
-				{
-					chart.data.labels.shift();
-					chart.data.datasets[0].data.shift();
-					chart.data.datasets[1].data.shift();
-					chart.data.datasets[2].data.shift();
+			var ctx = document.getElementById("speedChart").getContext('2d');
+			var speedChart = new Chart(ctx, {
+				type: 'line',
+				data: {
+					labels: [],
+					datasets: [{
+						label: 'speed',
+						data: [],
+						backgroundColor: 'rgba(255, 159, 64, 0.2)',
+						borderColor: 'rgba(255, 159, 64, 1)',
+						borderWidth: 1
+					}]
+				},
+				options: {
+					scales: {
+						yAxes: [{
+							ticks: {
+								suggestedMin: 0,
+								suggestedMax: 130,
+							},
+							scaleLabel: {
+								display: true,
+								labelString: 'uT'
+							}
+						}]
+					}
 				}
+			});
 
-				chart.update();
+			function updateInterface(data) {
+
+				/* Update Accelerometer */
+				accChart.data.labels.push('');
+				accChart.data.datasets[0].data.push(data.adxl362.x);
+				accChart.data.datasets[1].data.push(data.adxl362.y);
+				accChart.data.datasets[2].data.push(data.adxl362.z);
+				while( accChart.data.labels.length > 30 )
+				{
+					accChart.data.labels.shift();
+					accChart.data.datasets[0].data.shift();
+					accChart.data.datasets[1].data.shift();
+					accChart.data.datasets[2].data.shift();
+				}
+				accChart.update();
+
+				/* Update Magnetometer */
+				magChart.data.labels.push('');
+				magChart.data.datasets[0].data.push(data.mag3110.xy);
+				magChart.data.datasets[1].data.push(data.mag3110.yz);
+				magChart.data.datasets[2].data.push(data.mag3110.zx);
+				while( magChart.data.labels.length > 30 )
+				{
+					magChart.data.labels.shift();
+					magChart.data.datasets[0].data.shift();
+					magChart.data.datasets[1].data.shift();
+					magChart.data.datasets[2].data.shift();
+				}
+				magChart.update();
+
+				/* Update Speed */
+				speedChart.data.labels.push('');
+				speedChart.data.datasets[0].data.push(data.GPS.SOG);
+				while( speedChart.data.labels.length > 30 )
+				{
+					speedChart.data.labels.shift();
+					speedChart.data.datasets[0].data.shift();
+				}
+				speedChart.update();
+
 			}
 
 			$(document).ready(function() {
