Fix legend of accelerometer

--- a/example3/accelerometre.html
+++ b/example3/accelerometre.html
@@ -120,7 +120,7 @@
 				data: {
 					labels: [],
 					datasets: [{
-						label: 'X',
+						label: 'Y',
 						data: [],
 						backgroundColor: 'rgba(255, 159, 64, 0.2)',
 						borderColor: 'rgba(255, 159, 64, 1)',
@@ -149,7 +149,7 @@
 				data: {
 					labels: [],
 					datasets: [{
-						label: 'X',
+						label: 'Z',
 						data: [],
 						backgroundColor: 'rgba(255, 159, 64, 0.2)',
 						borderColor: 'rgba(255, 159, 64, 1)',
