--- a/example3/accelerometre.html
+++ b/example3/accelerometre.html
@@ -39,6 +39,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="gps.html">GPS</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="vectors.html">Vectors</a>
+				</li>
 			</ul>
 		</div>
 
@@ -121,6 +124,7 @@
 					  </div>
 					</div>
 				</div>
+			</div>
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
