--- a/example3/gps.html
+++ b/example3/gps.html
@@ -39,6 +39,9 @@
 				<li class="nav-item">
 					<a class="nav-link active" href="gps.html">GPS</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="vectors.html">Vectors</a>
+				</li>
 			</ul>
 		</div>
 
